Added getSkuRecords function on the InventoryController
